# bulk2es-rs

./: .gitignore  Cargo.toml  README.md
sample/: es.yaml  sample_schema.json
src/: lib.rs  loader.rs  main.rs  output.rs
