[package]
name = "bulk2es-rs"
version = "0.1.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
env_logger = "0.7.1"
log = "0.4.11"
elasticsearch = "7.9.0-alpha.1"
rayon = "1.4.0"
glob = "0.3.0"
url = "2.1.1"
serde = "1.0.115"
serde_derive ="1.0.115"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
tokio = "0.2.22"

[[bin]]
name = "bulk2es"
path = "src/main.rs"